--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env BASE_URL=http://127.0.0.1:8000 BROWSER_BASE_URL=http://localhost:8000 nuxt",
-    "build": "cross-env BASE_URL=https://v2fq.com nuxt build",
+    "dev": "cross-env BASE_URL=http://192.168.31.76:8000 BROWSER_BASE_URL=http://192.168.31.76:8090 NUXT_HOST=0.0.0.0 NUXT_PORT=8090 nuxt",
+    "build": "cross-env BASE_URL=https://v2fq.com BROWSER_BASE_URL=http://v2fq.com nuxt build",
     "start": "cross-env BASE_URL=https://v2fq.com nuxt start",
     "generate": "cross-env BASE_URL=https://v2fq.com nuxt generate"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
-    "cookie-universal-nuxt": "^2.1.4",
     "axios": "^0.21.1",
     "buefy": "^0.9.4",
+    "cookie-universal-nuxt": "^2.1.4",
     "core-js": "^2.6.12",
     "cross-env": "^7.0.3",
     "darkreader": "^4.9.27",
@@ -26,6 +26,7 @@
     "vue": "^2.6.14",
     "vue-infinite-loading": "^2.4.5",
     "vue-server-renderer": "^2.6.12",
+    "vue-social-share": "0.0.3",
     "vue-waterfall2": "^1.10.1",
     "vuex": "^3.0.1"
   },
