--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "darkreader": "^4.9.27",
     "date-fns": "^2.17.0",
     "dayjs": "^1.10.4",
-    "element-ui": "^2.15.0",
+    "element-ui": "^2.15.3",
     "js-cookie": "^2.2.1",
     "nprogress": "^0.2.0",
     "nuxt": "^2.15.3",
@@ -35,5 +35,8 @@
       "host": "127.0.0.1",
       "port": "8090"
     }
+  },
+  "devDependencies": {
+    "babel-plugin-component": "^1.1.1"
   }
 }
