--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env BASE_URL=http://192.168.31.76:8000 BROWSER_BASE_URL=http://192.168.31.76:8090 NUXT_HOST=0.0.0.0 NUXT_PORT=8090 nuxt",
-    "build": "cross-env BASE_URL=https://v2fq.com BROWSER_BASE_URL=http://v2fq.com nuxt build",
+    "dev": "cross-env BASE_URL=http://192.168.31.76:8000 BROWSER_BASE_URL=http://192.168.31.76:8090 nuxt",
+    "build": "cross-env BASE_URL=https://v2fq.com/api BROWSER_BASE_URL=https://v2fq.com nuxt build",
     "start": "cross-env BASE_URL=https://v2fq.com nuxt start",
     "generate": "cross-env BASE_URL=https://v2fq.com nuxt generate"
   },
@@ -26,6 +26,7 @@
     "vditor": "^3.8.1",
     "vue": "^2.6.14",
     "vue-infinite-loading": "^2.4.5",
+    "vue-qr": "^4.0.9",
     "vue-server-renderer": "^2.6.12",
     "vue-social-share": "0.0.3",
     "vue-waterfall2": "^1.10.1",
@@ -33,7 +34,7 @@
   },
   "config": {
     "nuxt": {
-      "host": "127.0.0.1",
+      "host": "0.0.0.0",
       "port": "8090"
     }
   },
