--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "js-cookie": "^2.2.1",
     "nprogress": "^0.2.0",
     "nuxt": "^2.15.3",
+    "urlencode": "^1.1.0",
     "vditor": "^3.8.1",
     "vue": "^2.6.14",
     "vue-infinite-loading": "^2.4.5",
