--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-universal-nuxt": "^2.1.4",
     "core-js": "^2.6.12",
     "cross-env": "^7.0.3",
+    "darkmode-js": "^1.5.7",
     "darkreader": "^4.9.27",
     "date-fns": "^2.17.0",
     "dayjs": "^1.10.4",
@@ -39,6 +40,11 @@
     }
   },
   "devDependencies": {
-    "babel-plugin-component": "^1.1.1"
+    "@nuxtjs/style-resources": "^1.2.1",
+    "babel-plugin-component": "^1.1.1",
+    "less": "^4.1.3",
+    "less-loader": "^6.0.0",
+    "sass": "^1.56.1",
+    "sass-loader": "^10.4.1"
   }
 }
