--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/proxy": "^2.0.0",
     "@nuxtjs/sitemap": "^2.4.0",
     "axios": "^0.21.1",
     "buefy": "^0.9.4",
